Added template for smartmet server timeseries

--- a/smartmet-server/config/plugins/grid-gui.conf
+++ b/smartmet-server/config/plugins/grid-gui.conf
@@ -48,6 +48,10 @@ land-sea-mask-file = "%(DIR)/grid-gui/land-sea-mask.jpeg"
 
 colorFile = "%(DIR)/grid-gui/colors2.csv"
 
+# Dali product definitions for parameters
+
+daliFile = "%(DIR)/grid-gui/dali.csv"
+
 isolineFile = "%(DIR)/grid-gui/isolines.csv"
 
 
@@ -83,10 +87,10 @@ imageCache :
 {
   # Image storage directory
   directory = "/tmp/"
-  
+
   # Delete old images when this limit is reached
   maxImages = 1000
-  
+
   # Number of images after the delete operation
   minImages = 500
 }
