--- a/smartmet-server/config/plugins/timeseries.conf
+++ b/smartmet-server/config/plugins/timeseries.conf
@@ -2,14 +2,15 @@ language                  = "en";
 locale                    = "en_US.utf8";
 
 # Observations are not required for ERA5 data use case
-# Obsenginen ei pitäisi olla pakollinen. Sen voi disabloida 
-# "obsengine_disabled " konfiguraatioparametrin avulla. 
+# Obsenginen ei pitäisi olla pakollinen. Sen voi disabloida
+# "obsengine_disabled " konfiguraatioparametrin avulla.
 # Kyseinen timeseries-versio on haaroittunut varsin vanhasta versiosta,
 # jossa alunperin taidettiin käyttää "observation_disabled" -parametria,
 # mutta se ei edes toiminut.
-obsengine_disabled = true
-#observation_disabled      = true;
+obsengine_disabled = true;
+observation_disabled = true;
 #postgis.disabled        = true;
+primaryForecastSource = "grid"; 
 
 precision:
 {
