--- a/timeseries_cloudformation.template
+++ b/timeseries_cloudformation.template
@@ -36,7 +36,7 @@ Resources:
         # The template use an AMI that has SmartMet Server and Redis running
         # inside a Docker container
         LaunchTemplateId: lt-0103908425591b1a5
-        Version: 3
+        Version: 6
       Tags:
         - Key: Name
           Value: !Join
@@ -59,6 +59,7 @@ Resources:
             # Create a directory that is configured in SmartMet Server filesys-to-smartmet.cfg settings file
             # And volume mounted in docker-compose
             mkdir -p /home/centos/era5-data
+            rm -f /home/centos/era5-data/*
 
             # Get data and rename to something ss understands
             # Resulting files have first of January as "origintime" in filename
@@ -72,8 +73,11 @@ Resources:
             # home, and is propably really stupid,
             # but with current know-how is the best that we can do
             cd /home/centos/sasse-era5-smartmet-grid
-            git pull
+            # git pull
             docker-compose up -d fminames-db
+            docker-compose up -d smartmet-server
+
+            sleep 10
 
             # THE SMARTMET-SERVER DOCKER IMAGE HAS TO BE RUNNING IN ORDER FOR THE NEXT STEPS TO WORK
 
@@ -83,8 +87,12 @@ Resources:
             # CHECK THAT THE AMI HAS DOCKER CONTAINERS RUNNING ON START
             docker exec --user smartmet smartmet-server /bin/fmi/filesys2smartmet /home/smartmet/config/libraries/tools-grid/filesys-to-smartmet.cfg 0
 
+            sleep 10
+            docker-compose up -d smartmet-server
+
             # Run data extraction
             cd /home/centos/sasse-polygon-process
+
             export StartTime=${StartTime}
             export EndTime=${EndTime}
             export smartmet_config_name=production
