enable virtual files to calculate wind vector

--- a/smartmet-server/config/engines/grid-engine.conf
+++ b/smartmet-server/config/engines/grid-engine.conf
@@ -78,7 +78,7 @@ smartmet :
       ior     = "$(CORBA_CONTENT_SERVER_IOR)"
 
       ######  The local content server. These settings are valid when the "remote" attribute is "false".
-      content-source : 
+      content-source :
       {
         # Content source type (redis/corba/http)
         type = "redis"
@@ -167,7 +167,7 @@ smartmet :
       # new virtual files.
       virtualFiles :
       {
-        enabled = false
+        enabled = true
         definitionFile = "%(DIR)/grid-engine/vff_convert.csv"
       }
 
