--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -21,6 +21,15 @@ services:
       # The password is only required for the entrypoint script (see below)
       # Wouldn't it be nice to store this some where else.
       - POSTGRES_PASSWORD=OmaHassuSalasana1234!
+      - LC_ADDRESS=fi_FI.UTF-8
+      - LC_IDENTIFICATION=fi_FI.UTF-8
+      - LC_MEASUREMENT=fi_FI.UTF-8
+      - LC_MONETARY=fi_FI.UTF-8
+      - LC_NAME=fi_FI.UTF-8
+      - LC_NUMERIC=en_US.UTF-8
+      - LC_PAPER=fi_FI.UTF-8
+      - LC_TELEPHONE=fi_FI.UTF-8
+      - LC_TIME=fi_FI.UTF-8
     ports:
       - "80:8080"
     depends_on:
