--- a/timeseries_cloudformation.template
+++ b/timeseries_cloudformation.template
@@ -27,7 +27,7 @@ Resources:
         # The template use an AMI that has SmartMet Server and Redis running
         # inside a Docker container
         LaunchTemplateId: lt-0103908425591b1a5
-        Version: 7
+        Version: 8
       Tags:
         - Key: Name
           Value: !Join
@@ -45,7 +45,7 @@ Resources:
       UserData:
         Fn::Base64:
           Fn::Sub: |
-            #!/bin/bash
+            #!/bin/bash -xe
 
             # Create a directory that is configured in SmartMet Server filesys-to-smartmet.cfg settings file
             # And volume mounted in docker-compose
@@ -65,9 +65,10 @@ Resources:
             # but with current know-how is the best that we can do
             cd /home/centos/sasse-era5-smartmet-grid
             # git pull
+
             docker-compose up -d fminames-db
-            sleep 15
             docker-compose up -d smartmet-server
+
             sleep 15
 
             # THE SMARTMET-SERVER DOCKER IMAGE HAS TO BE RUNNING IN ORDER FOR THE NEXT STEPS TO WORK
@@ -78,7 +79,7 @@ Resources:
             # CHECK THAT THE AMI HAS DOCKER CONTAINERS RUNNING ON START
             docker exec --user smartmet smartmet-server /bin/fmi/filesys2smartmet /home/smartmet/config/libraries/tools-grid/filesys-to-smartmet.cfg 0
 
-            sleep 30
+            sleep 300
 
             # Run data extraction
             cd /home/centos/sasse-polygon-process
