New version of code (included throttling)

--- a/timeseries_cloudformation_debug.template
+++ b/timeseries_cloudformation_debug.template
@@ -32,7 +32,7 @@ Resources:
         # The template use an AMI that has SmartMet Server and Redis running
         # inside a Docker container
         LaunchTemplateId: lt-0103908425591b1a5
-        Version: 8
+        Version: 12
       Tags:
         - Key: Name
           Value: !Join
@@ -59,8 +59,8 @@ Resources:
 
             # Get data and rename to something ss understands
             # Resulting files have first of January as "origintime" in filename
-            # aws s3 cp s3://fmi-era5-world-nwp-parameters/${ERA5DataYear}/era5-${ERA5DataYear}${ERA5DataMonth}.grib /home/centos/era5-data/ERA5_${ERA5DataYear}0101T000000_era5-${ERA5DataYear}${ERA5DataMonth}.grib
-            # aws s3 cp s3://fmi-era5-world-nwp-parameters/${ERA5DataYear}/era5-preprocessed-${ERA5DataYear}${ERA5DataMonth}.grib2 /home/centos/era5-data/ERA5_${ERA5DataYear}0101T000000_era5-preprocessed-${ERA5DataYear}${ERA5DataMonth}.grib2
+            aws s3 cp s3://fmi-era5-world-nwp-parameters/${ERA5DataYear}/era5-${ERA5DataYear}${ERA5DataMonth}.grib /home/centos/era5-data/ERA5_${ERA5DataYear}0101T000000_era5-${ERA5DataYear}${ERA5DataMonth}.grib
+            aws s3 cp s3://fmi-era5-world-nwp-parameters/${ERA5DataYear}/era5-preprocessed-${ERA5DataYear}${ERA5DataMonth}.grib2 /home/centos/era5-data/ERA5_${ERA5DataYear}0101T000000_era5-preprocessed-${ERA5DataYear}${ERA5DataMonth}.grib2
 
             # Allow normal user to access data
             chown -R centos:centos /home/centos/era5-data
@@ -81,11 +81,11 @@ Resources:
             # cd sasse-era5-smartmet-grid
             #
             # CHECK THAT THE AMI HAS DOCKER CONTAINERS RUNNING ON START
-            # docker exec --user smartmet smartmet-server /bin/fmi/filesys2smartmet /home/smartmet/config/libraries/tools-grid/filesys-to-smartmet.cfg 0
+            docker exec --user smartmet smartmet-server /bin/fmi/filesys2smartmet /home/smartmet/config/libraries/tools-grid/filesys-to-smartmet.cfg 0
 
-            # sleep 300
+            docker-compose up -d smartmet-server
 
-            # docker-compose up -d smartmet-server
+            sleep 15
 
             # Run data extraction
             cd /home/centos/sasse-polygon-process
@@ -94,5 +94,7 @@ Resources:
             export EndTime=${ERA5DataYear}-${ERA5DataMonth}-28T00:00:00
             export smartmet_config_name=production
             export db_config_name=production
+            export DatasetName=classification_dataset_ext
+            export requests_throttle_time=2
 
-            # docker-compose run tracker
+            #docker-compose run tracker
