--- a/timeseries_cloudformation.template
+++ b/timeseries_cloudformation.template
@@ -27,7 +27,7 @@ Resources:
         # The template use an AMI that has SmartMet Server and Redis running
         # inside a Docker container
         LaunchTemplateId: lt-0103908425591b1a5
-        Version: 8
+        Version: 12
       Tags:
         - Key: Name
           Value: !Join
@@ -79,7 +79,9 @@ Resources:
             # CHECK THAT THE AMI HAS DOCKER CONTAINERS RUNNING ON START
             docker exec --user smartmet smartmet-server /bin/fmi/filesys2smartmet /home/smartmet/config/libraries/tools-grid/filesys-to-smartmet.cfg 0
 
-            sleep 300
+            docker-compose up -d smartmet-server
+
+            sleep 15
 
             # Run data extraction
             cd /home/centos/sasse-polygon-process
@@ -88,6 +90,8 @@ Resources:
             export EndTime=${EndTime}
             export smartmet_config_name=production
             export db_config_name=production
+            export DatasetName=classification_dataset_ext
+            export requests_throttle_time=2
 
             docker-compose run tracker
 
