Added forest information config

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -42,6 +42,7 @@ services:
       # For this container you need grib2-data in ../era5-data directory
       # Location is relative to this docker-compose.yaml file.
       - ../era5-data:/srv/data:Z
+      - ../data/puusto:/srv/puusto/:Z
     entrypoint:
       # The content of 'command' is passed as an argument to entrypoint script
       - "/home/smartmet/scripts/wait-for-postgres.sh"
