--- a/smartmet-server/config/libraries/tools-grid/filesys-to-smartmet.cfg
+++ b/smartmet-server/config/libraries/tools-grid/filesys-to-smartmet.cfg
@@ -57,7 +57,8 @@ filesys2smartmet :
     # I guess it is to define the directories which should be scanned 
     directories = 
     [
-      "/srv/data"
+      "/srv/data",
+      "/srv/puusto",
     ]
 
     patterns = 
